--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,12 +31,12 @@
                     <a class="nav-link" href="{{ path('main_home') }}">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('main_activity') }}"">Les activitées</a>
+                    <a class="nav-link" href="{{ path('main_activity') }}">Les activitées</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Inscription</a>
+                    <a class="nav-link" href="#"><i class="fas fa-user-plus mr-1"></i>Inscription</a>
                 </li>
             </ul>
         </div>
