--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -6,7 +6,14 @@
 
 {# Contenu de la page #}
 {% block body %}
-    <h1>Acceuil</h1>
+
+<div class="container-fluid">
+
+    <div class="row">
+        <h1 class="col-12 text-center my-5">Bourgui BOOK</h1>
+    </div>
+</div>
+
 {% endblock %}
 
 {# Fichiers CSS individuels de la page #}
