--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,9 +35,32 @@
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-user-plus mr-1"></i>Inscription</a>
-                </li>
+                {# Boutons si l'utilisateur est connecté #}
+                {% if app.user %}
+
+                    <li class="nav-item dropdown">
+                        <a data-toggle="dropdown" aria-haspopup="true" role="button" id="profil-dropdown" href="#" class="nav-link dropdown-toggle text-light">
+                            <i class="fas fa-user mr-1"></i>{{ app.user.pseudonym }}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="profil-dropdown">
+                            <a href="{{ path('profil') }}" class="dropdown-item"><i class="fas fa-users-cog mr-1"></i>Mon profil</a>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <a href="{{ path('admin') }}" class="dropdown-item text-danger"><i class="fas fa-sign-out-alt mr-1"></i>Administration</a>
+                            {% endif %}
+                            <div class="dropdown-divider"></div>
+                            <a href="{{ path('app_logout') }}" class="dropdown-item"><i class="fas fa-sign-out-alt mr-1"></i>Déconnexion</a>
+                        </div>
+                    </li>
+
+                {# Boutons si l'utilisateur n'est pas connecté #}
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_register') }}"><i class="fas fa-user-plus mr-1"></i>Inscription</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_login') }}"><i class="fas fa-sign-in-alt mr-1"></i>Connexion</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
