--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -9,9 +9,11 @@
 
 <div class="container-fluid">
 
+    {# Titre h1 #}
     <div class="row">
         <h1 class="col-12 text-center my-5">Bourgui BOOK</h1>
     </div>
+
 </div>
 
 {% endblock %}
