--- a/templates/main/profil.html.twig
+++ b/templates/main/profil.html.twig
@@ -8,16 +8,17 @@
 {% block body %}
 
     <div class="container-fluid">
-
+        {# H1 #}
         <div class="row">
             <h1 class="col-12 text-center my-4">Gestion du profil</h1>
         </div>
 
+        {# Info profil #}
         <div class="row">
             <div class="col-12 col-md-10 offset-md-1">
                 <div class="row">
                     
-                    <div class="col-12 col-md-9 px-2 py-3 bg-dark d-flex justify-content-center align-items-center">
+                    <div class="col-12 col-md-10 px-2 py-3 bg-dark d-flex justify-content-center align-items-center">
                         <ul class="list-group col-12 col-md-8 p-0">
                             <li class="list-group-item bg-black">Pseudonyme : <span class="text-dark">{{ app.user.pseudonym }}</span></li>
                             <li class="list-group-item bg-black">Adresse Email : <span class="text-dark">{{ app.user.email }}</span></li>
