--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Création d'un compte{% endblock %}
+{% block title %}Créer un compte{% endblock %}
 
 {% block body %}
     {% for flashError in app.flashes('verify_email_error') %}
@@ -9,7 +9,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <h1 class="col-12 text-center my-5">Création d'un compte</h1>
+            <h1 class="col-12 text-center my-5">Créer un compte</h1>
         </div>
 
         <div class="row">
