--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,7 @@
 <body>
 <div class="container-fluid">
 
+    {# Navbar principale #}
     <nav class="row navbar navbar-expand-lg navbar-dark bg-dark nav-main sticky-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
