--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -3,7 +3,7 @@
 <p>
     Pour réinitialiser votre mot de passe, veuillez visiter
     <a href="{{ url('app_reset_password', {token: resetToken.token}) }}">ici</a>
-    Ce lien expirera dans {{ tokenLifetime|date('g') }} hour(s)..
+    Ce lien expirera dans {{ tokenLifetime|date('g') }} heure(s)..
 </p>
 
 <p>
