--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -8,11 +8,14 @@
 {% block body %}
 
 <div class="container-fluid">
-
+    
     {# Titre h1 #}
     <div class="row">
         <h1 class="col-12 text-center my-5">Bourgui BOOK</h1>
     </div>
+
+    {##}
+    <div class="row"></div>
 
 </div>
 
