--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-12 col-md-4 offset-md-4">
 
-                {# Ouverture du formulaire #}
+                {# Ouverture du formulaire request #}
                 {{ form_start(requestForm) }}
 
                     {# Champ email #}
@@ -34,7 +34,7 @@
                     {# Bouton de validation #}
                     <button class="btn btn-secondary">Envoyer la réinitialisation du mot de passe</button>
 
-                {# Fermeture du formulaire #}
+                {# Fermeture du formulaire request #}
                 {{ form_end(requestForm) }}
 
             </div>
