--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="col-12 col-md-4 offset-md-4">
 
-            {# Ouverture du formulaire #}
+            {# Ouverture du formulaire de reset#}
             {{ form_start(resetForm) }}
 
                 {# Champ mot de passe #}
@@ -22,7 +22,7 @@
                 {# Bouton de validation #}
                 <button class="btn btn-secondary">Réinitialisez votre mot de passe</button>
 
-            {# Fermeture du formulaire #}
+            {# Fermeture du formulaire de reset#}
             {{ form_end(resetForm) }}
 
         </div>
