--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,41 +4,41 @@
 
 {% block body %}
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12 col-md-4 offset-md-4">
+    <div class="container-fluid">
+        
+        <div class="row">
+            <div class="col-12 col-md-4 offset-md-4">
 
-            <form method="POST">
-                {% if error %}
-                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                {% endif %}
+                <form method="POST">
+                    {% if error %}
+                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    {% endif %}
 
-                {% if app.user %}
-                    <div class="mb-3">
-                        Vous êtes connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
+                    {% if app.user %}
+                        <div class="mb-3">
+                            Vous êtes connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
+                        </div>
+                    {% endif %}
+
+                    <h1 class="h3 mb-3 font-weight-bold">Bienvenue, nous sommes heureux de vous revoir !</h1>
+
+                    <div class="form-group">
+                        <label for="inputEmail">Adresse Email :</label>
+                        <input placeholder="bourguibook@exemple.com" type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
+                        <small id="emailHelp" class="form-text text-muted">Vous devez vous connecter avec votre adresse email.</small>
                     </div>
-                {% endif %}
+                    <div class="form-group">
+                        <label for="inputPassword">Mot de passe :</label>
+                        <input type="password" name="password" id="inputPassword" class="form-control" required>
+                    </div>
 
-                <h1 class="h3 mb-3 font-weight-bold">Bienvenue !</h1>
-                <p class="h3 mb-3 font-italic">Nous sommes heureux de vous revoir.</p>
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-                <div class="form-group">
-                    <label for="inputEmail">Adresse Email :</label>
-                    <input placeholder="bourguibook@exemple.com" type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-                    <small id="emailHelp" class="form-text text-muted">Vous devez vous connecter avec votre adresse email.</small>
-                </div>
-                <div class="form-group">
-                    <label for="inputPassword">Mot de passe :</label>
-                    <input type="password" name="password" id="inputPassword" class="form-control" required>
-                </div>
-
-                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-                <input type="submit" class="btn btn-outline-secondary col-12">
-            </form>
+                    <input type="submit" class="btn btn-outline-secondary col-12">
+                </form>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
 
 {# Fichiers CSS individuels de la page #}
