--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -18,7 +18,7 @@
 
         {# Formulaire de demande de reset de mot de passe #}
         <div class="row">
-            <div class="col-12 col-md-4 offset-md-4">
+            <div class="col-12 col-md-4 offset-md-4 text-white">
 
                 {# Ouverture du formulaire request #}
                 {{ form_start(requestForm) }}
