--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,7 @@
 {# Variable Twig contenant le nom de la route actuelle (pour faire fonctionner correctement le menu) #}
 {% set currentRoute = app.request.attributes.get('_route') %}
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" class="h-100">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
     {# Inclusion des fichiers CSS individuels des pages #}
     {% block stylesheets %}{% endblock %}
 </head>
-<body>
+<body class="h-100 d-flex flex-column">
     <div class="container-fluid">
 
         {# Navbar principale #}
@@ -26,16 +26,14 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <a class="navbar-brand" href="{{ path('main_home') }}">{{ site_name }}</a>
+                <a class="navbar-brand" href="{{ path('main_home') }}"><img src="{{ asset('images/logo.png') }}" height="50" width="50" alt="bourguibook" class="img-fluid main-navbar-logo">{{ site_name }}</a>
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('main_home') }}"><i class="fas fa-home mr-1"></i>Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('main_activity') }}">Les activitées</a>
+                        <a class="nav-link" href="{{ path('main_activity') }}"><i class="fa fa-calendar-o" aria-hidden="true"></i>Les activités</a>
                     </li>
-                </ul>
-                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     {# Boutons si l'utilisateur est connecté #}
                     {% if app.user %}
 
@@ -46,7 +44,7 @@
                             <div class="dropdown-menu" aria-labelledby="profil-dropdown">
                                 <a href="{{ path('profil') }}" class="dropdown-item"><i class="fas fa-users-cog mr-1"></i>Mon profil</a>
                                 {% if is_granted('ROLE_ADMIN') %}
-                                    <a href="{{ path('admin') }}" class="dropdown-item text-danger"><i class="fas fa-sign-out-alt mr-1"></i>Administration</a>
+                                    <a href="{{ path('easyadmin') }}" class="dropdown-item text-danger"><i class="fas fa-sign-out-alt mr-1"></i>Administration</a>
                                 {% endif %}
                                 <div class="dropdown-divider"></div>
                                 <a href="{{ path('app_logout') }}" class="dropdown-item"><i class="fas fa-sign-out-alt mr-1"></i>Déconnexion</a>
@@ -68,14 +66,26 @@
 
         {# Affichage du contenu principal des pages #}
         {% block body %}{% endblock %}
-        <footer>
-            <nav class="row nav justify-content-center footer navbar-dark bg-dark nav-footer">
+    </div>
+    <footer class="mt-auto">
+        <nav class="navbar sticky-bottom navbar-expand-sm navbar-dark bg-dark nav-footer d-flex flex-column flex-md-row justify-content-center align-items-center">
+            <div class="copyright mr-0 mr-md-5">
+                <p class="m-0">
+                    <i class="fa fa-copyright" aria-hidden="true"></i> 2020
+                    Mention légales
+                    C.G.U
+                </p>
+            </div>
+            <div class="social media mr-0 mr-md-5">
                 <a class="nav-link" href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
                 <a class="nav-link" href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
                 <a class="nav-link" href="https://twitter.com/explore" target="_blank"><i class="fab fa-twitter-square"></i></a>
-            </nav>
-        </footer>
-    </div>
+            </div>
+            <div class="contact">
+                <a class="nav-link" href="{{ path('contact') }}">Contactez-nous!</a>
+            </div>
+        </nav>
+    </footer>
     {# Inclusion des fichiers JS généraux du site #}
     <script src="{{ asset('js/jquery-3.5.1.min.js') }}"></script>
     <script src="{{ asset('js/popper.min.js') }}"></script>
