--- a/templates/main/profil.html.twig
+++ b/templates/main/profil.html.twig
@@ -14,19 +14,14 @@
         </div>
 
         {# Info profil #}
+
         <div class="row">
-            <div class="col-12 col-md-10 offset-md-1">
-                <div class="row">
-                    <div class="col-12 col-md-10 px-2 py-3 bg-dark d-flex justify-content-center align-items-center">
-                        <ul class="list-group col-12 col-md-8 p-0">
-                            <li class="list-group-item bg-black">Pseudonyme : <span class="text-dark">{{ app.user.pseudonym }}</span></li>
-                            <li class="list-group-item bg-black">Adresse Email : <span class="text-dark">{{ app.user.email }}</span></li>
-                            <li class="list-group-item bg-black">Numéro de télephone : <span class="text-dark">{{ app.user.phoneNumber }}</span></li>
-                            <li class="list-group-item bg-black">Compte : <span class="text-dark">{{ is_granted('ROLE_ADMIN') ? 'Administrateur' : 'Membre' }}</span></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            <ul class="pr-0 my-3 col-12 offset-0 col-md-6 offset-md-3 list-group rp-0 border-style">
+                <li class="list-group-item list-group-item-dark">Pseudonyme : <span class="text-dark">{{ app.user.pseudonym }}</span></li>
+                <li class="list-group-item list-group-item-dark">Adresse Email : <span class="text-dark">{{ app.user.email }}</span></li>
+                <li class="list-group-item list-group-item-dark">Numéro de télephone : <span class="text-dark">{{ app.user.phoneNumber }}</span></li>
+                <li class="list-group-item list-group-item-dark">Compte : <span class="text-dark">{{ is_granted('ROLE_ADMIN') ? 'Administrateur' : 'Membre' }}</span></li>
+            </ul>
         </div>
     </div>
 
