--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,7 +13,7 @@
         </div>
 
         <div class="row">
-            <div class="col-12 col-md-4 offset-md-4">
+            <div class="col-12 col-md-4 offset-md-4 text-white">
 
                 {# Ouverture du formulaire #}
                 {{ form_start(registrationForm) }}
