--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,7 +5,11 @@
 {% block body %}
 
     <div class="container-fluid">
-        
+        {# Affichage des messages flash de type "success" #}
+        {% include 'partials/success.html.twig' %}
+
+        {# Affichage des messages flash de type "error" #}
+        {% include 'partials/error.html.twig' %}
         <div class="row">
             <div class="col-12 col-md-4 offset-md-4">
 
@@ -20,15 +24,15 @@
                         </div>
                     {% endif %}
 
-                    <h1 class="h3 mb-3 font-weight-bold">Bienvenue, nous sommes heureux de vous revoir !</h1>
+                    <h1 class="h3 my-5">Nous sommes heureux de vous revoir !</h1>
 
                     <div class="form-group">
-                        <label for="inputEmail">Adresse Email :</label>
+                        <label for="inputEmail" class="text-white">Adresse Email :</label>
                         <input placeholder="bourguibook@exemple.com" type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-                        <small id="emailHelp" class="form-text text-muted">Vous devez vous connecter avec votre adresse email.</small>
+                        <small id="emailHelp" class="form-text text-white">Vous devez vous connecter avec votre adresse email.</small>
                     </div>
                     <div class="form-group">
-                        <label for="inputPassword">Mot de passe :</label>
+                        <label for="inputPassword" class="text-white">Mot de passe :</label>
                         <input type="password" name="password" id="inputPassword" class="form-control" required>
                     </div>
 
