--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,17 +26,20 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <a class="navbar-brand" href="{{ path('main_home') }}"><img src="{{ asset('images/logo.png') }}" height="50" width="50" alt="bourguibook" class="img-fluid main-navbar-logo">{{ site_name }}</a>
+                <a class="navbar-brand" href="{{ path('main_home') }}"><img src="{{ asset('images/logo.png') }}" height="50" width="50" alt="bourguibook" class="img-fluid main-navbar-logo"> {{ site_name }}</a>
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('main_home') }}"><i class="fas fa-home mr-1"></i>Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('main_activity') }}"><i class="fa fa-calendar-o" aria-hidden="true"></i>Les activités</a>
+                        <a class="nav-link" href="{{ path('main_activity') }}"><i class="fas fa-calendar-check mr-1"></i>Les activités</a>
                     </li>
                     {# Boutons si l'utilisateur est connecté #}
                     {% if app.user %}
 
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('add_activity') }}"><i class="fas fa-calendar-check mr-1"></i>Ajouter une activité</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a data-toggle="dropdown" aria-haspopup="true" role="button" id="profil-dropdown" href="#" class="nav-link dropdown-toggle text-light">
                                 <i class="fas fa-user mr-1"></i>{{ app.user.pseudonym }}
@@ -61,6 +64,7 @@
                         </li>
                     {% endif %}
                 </ul>
+                <div><img src="{{ asset('images/flag.png') }}" alt="flag" height="25" width="30"></div>
             </div>
         </nav>
 
