--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -36,6 +36,9 @@
                     {# Affichage champ email #}
                     {{ form_row(registrationForm.email) }}
 
+                    <div>
+                        <p>Votre mot de passe doit contenir au moins une miniscule, une majuscule, un chiffre et un caractère spécial</p>
+                    </div>
                     {# Affichage champ plainPassword #}
                     {{ form_row(registrationForm.plainPassword) }}
 
@@ -49,6 +52,10 @@
 
                     {# Affichage bouton de validation #}
                     {{ form_row(registrationForm.save) }}
+
+                    <div>
+                        <p>*champ obligatoire</p>
+                    </div>
 
                 {# Fermeture du formulaire #}
                 {{ form_end(registrationForm) }}
