fichier html.twig

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -37,7 +37,7 @@
                     {{ form_row(registrationForm.email) }}
 
                     <div>
-                        <p>Votre mot de passe doit contenir au moins une miniscule, une majuscule, un chiffre et un caractère spécial</p>
+                        <small>Votre mot de passe doit contenir au moins une miniscule, une majuscule, un chiffre et un caractère spécial</small>
                     </div>
                     {# Affichage champ plainPassword #}
                     {{ form_row(registrationForm.plainPassword) }}
@@ -54,7 +54,7 @@
                     {{ form_row(registrationForm.save) }}
 
                     <div>
-                        <p>*champ obligatoire</p>
+                        <p>* Champs à renseigner obligatoirement</p>
                     </div>
 
                 {# Fermeture du formulaire #}
