--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,7 +38,7 @@
 
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-                    <input type="submit" class="btn btn-outline-secondary col-12">
+                    <input type="submit" class="btn btn-outline-secondary col-12 bg-dark">
                 </form>
             </div>
         </div>
