--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -25,7 +25,7 @@
                         <label for="inputPassword" class="text-white">Mot de passe :</label>
                         <input type="password" name="password" id="inputPassword" class="form-control" required>
                     </div>
-                    <input type="submit" class="btn btn-outline-secondary col-12">
+                    <input type="submit" class="btn btn-outline-secondary col-12 bg-dark">
                 </form>
             </div>
         </div>
