--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -64,7 +64,7 @@
                         </li>
                     {% endif %}
                 </ul>
-                <div><img src="{{ asset('images/flag.png') }}" alt="flag" height="25" width="30"></div>
+                <div><img src="{{ asset('images/FR.png') }}" alt="flag" height="25" width="30"></div>
             </div>
         </nav>
 
