--- a/templates/activity/actitivySearch.html.twig
+++ b/templates/activity/actitivySearch.html.twig
@@ -1,4 +1,3 @@
-
 {# Utilisation du squelette de page base.html.twig #}
 {% extends 'base.html.twig' %}
 
@@ -7,26 +6,21 @@
 
 {# Contenu de la page #}
 {% block body %}
+    {# Affichage des messages flashs de type "success" si il y en a #}
+    {% include 'partials/success.html.twig' %}
+    <div class="row">
+     <h3 class="col-12 text-center my-5">Résultat de votre recherche </h3>
+    </div>
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-10 offset-1 col-md-2 offset-md-5 mt-3 ">
-                <form class="form-inline my-2 my-lg-0" method="GET" action="{{ path('activity_search') }}">
-                    <fieldset><!--Regroupe un ensemble de champs avec légende-->
-                        <select class="form-control " type="search" name="q">
-                            <option selected>choissisait une activité rapidement</option>
-                            <option value="hotel">Hotel</option>
-                            <option value="restaurant">Restaurant</option>
-                            <option value="autre">Autre</option>
-                        </select>
-                    </fieldset>
-                    <button type="submit" class=" offset-4 btn btn-dark">Validé</button
-                </form>
-            </div>
-        </div>
-        <div class="row mb-5">
             <div class="col-12 ">
-                    <section class="row">
+                <section class="row">
+                    {% if activitys is empty %}
+                        <div class="col-12 text-center">
+                            <h3>Il n'y a pas de résultat pour votre recherche</h3>
+                        </div>
+                    {% else %}
                         {% for activity in activitys %}
                             <div class="mt-2  col-12 col-md-4">
                                 <div class="card">
@@ -40,9 +34,16 @@
                                 </div>
                             </div>
                         {% endfor %}
-                    </section>
+                    {% endif %}
+                </section>
             </div>
         </div>
     </div>
 
+    <div class="my-3 text-center">
+        <div class="d-inline-block">
+            {# Affichage du menu permettant de naviguer entre les différentes pages #}
+            {{ knp_pagination_render(activitys) }}
+        </div>
+    </div>
 {% endblock %}
